# os-chatpdf

./: README.md  pyproject.toml
chatpdf/: main.py
chatpdf/models/: agent.py
