[tool.poetry]
name = "chatpdf"
version = "0.1.0"
description = ""
authors = ["Manuel Martin Morante <manuzombiesbf1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.190"
unstructured = "^0.7.1"
layoutparser = "^0.3.4"
tabulate = "^0.9.0"

[tool.poetry.scripts]
start = "chatpdf.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
